Agregar contenido , diseño , responsi

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles.css">
-    <link rel="shortcut icon" href="./Images/Fruta.png" type="image/x-icon">
-    <title>Fruteria Don Paco</title>
+    <link rel="shortcut icon" href="./Images/LogoV2.png" type="image/x-icon">
+    <title>Fruteria Don Tino</title>
 </head>
 
 <body>
     <div class="fondoPrincipal">
         <header>
             <nav>
-                <img src="./Images/logo.jpg" alt="logo" class="logo">
-                <h1 class="title">Fruteria Don Benito</h1>
+                <img src="./Images/LogoV2.png" alt="logo" class="logo">
+                <h1 class="title">Fruteria Don Tino</h1>
                 <section>
                     <a href="#" class="login">Iniciar</a>
                     <a href="#" class="login">Crear</a>
@@ -34,9 +34,9 @@
                     <p class="Descripcion">
                         Somos una empresa comprometida con la salud de nuestros clientes. Por eso, ofrecemos una
                         selección cuidadosamente seleccionada de frutas y leguminosas, que son una fuente importante de
-                        vitaminas, minerales y fibra. Nuestros productos son frescos y de alta calidad, y los enviamos a
-                        todo el país, para que puedas disfrutarlos en la comodidad de tu hogar.
+                        vitaminas, minerales y fibra.
                     </p>
+
                 </article>
             </section>
         </main>
@@ -52,6 +52,9 @@
                             Las fresas son una fruta rica en vitamina C, antioxidantes y fibra. Son una buena opción
                             para mejorar tu sistema inmunológico y proteger tu cuerpo de los radicales libres.
                         </p>
+                        <button class="btn btn-primary">
+                            Agregar
+                        </button>
                     </div>
                 </div>
             </div>
@@ -73,8 +76,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Pepino</h5>
                         <p class="card-text">El pepino es una fruta rica en agua y fibra, lo que lo convierte en una
-                            excelente opción para mantenerte hidratado y regular tu tránsito intestinal. También es una
-                            buena fuente de vitamina K, que es importante para la salud de los huesos.
+                            excelente opción para mantenerte hidratado y regular tu tránsito intestinal.
                         </p>
                     </div>
                 </div>
@@ -90,7 +92,25 @@
                     </div>
                 </div>
             </div>
+
+            <!-- 
+                <div class="#">
+                    <h2 class="titulo-principal" id="titulo-principal">Todos los productos.</h2>
+                    <div id="contenedor-productos" class="contenedor-productos">
+                         Esto se va a rellenar con JS 
+                    </div>
+                </div>
+            -->
         </div>
+        <!--dfjhbfjkvnjfnv-->
+        <h2 class="titulo-principal card-title" id="titulo-principal">Todos los productos</h2>
+
+        <div id="contenedor-productos" class="contenedor-productos row row-cols-1 row-cols-md-4 g-4">
+
+        </div>
+
+        </div>
+
     </aside>
     <footer>
         <h6>Hecho: Juan Yahir Isidro Cervantes <br> Programacion - "5EV" </h6>
@@ -98,6 +118,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script src="./main.js"></script>
 </body>
 
 </html>
